--- a/wwa.css
+++ b/wwa.css
@@ -11,8 +11,13 @@
 .wwa-size-box {
     width: 560px;
     height: 440px;
-    font-size: 14px;
+    font-size: 16px;
     font-family: 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro', 'メイリオ','Meiryo','ＭＳ Ｐゴシック',sans-serif;
+    line-height:1.2;
+    text-indent:0px;
+    letter-spacing:0px;
+    word-spacing: 0px;
+    writing-mode:horizontal-tb;
 }
 
 div#wwa-wrapper {
@@ -53,6 +58,7 @@ div#wwa-sidebar>div.wide-cell-row {
     border: 0px;
     width: 120px;
     height: 25px;
+    font-size: 14px;
 }
 
 div#wwa-sidebar>div.wide-cell-row.onpress/*, div#wwa-sidebar>div.wide-cell-row:hover*/ {
@@ -396,10 +402,10 @@ div.item-disp {
     padding: 0;
     margin: 18px;
     border-style: solid;
-    border-width: 1px;
+    border-width: 2px;
     border-color: #000000;
-    border-radius: 5px;
-    background-color: rgba( 255, 255, 255, 0.9 );
+    border-radius: 10px;
+/*    background-color: rgba( 255, 255, 255, 0.9 ); */ /*システムで指定することになりました。$colorで。*/
     z-index: 230;
     cursor: pointer;
     overflow: auto;
@@ -433,7 +439,7 @@ div.item-disp {
 #wwa-battle-estimate>.est>.est-status-wrapper>div {
     width: 150px;
     overflow: hidden;
-    font-size: 13px;
+    font-size: 16px;
     position: absolute;
 }
 
