イメージが2倍の頻度で発生する仕様を修正、また昔のWWAっぽくスタイルを変更

--- a/wwa.css
+++ b/wwa.css
@@ -11,13 +11,15 @@
 .wwa-size-box {
     width: 560px;
     height: 440px;
-    font-size: 16px;
-    font-family: 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro', 'メイリオ','Meiryo','ＭＳ Ｐゴシック',sans-serif;
-    line-height:1.2;
-    text-indent:0px;
-    letter-spacing:0px;
+    font-size: 18px;
+    /*font-family: 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro', 'メイリオ','Meiryo','ＭＳ Ｐゴシック',sans-serif;*/
+    font-family: monospace;
+    line-height: 1.2;
+    text-indent: 0px;
+    text-shadow: 1px 0px 0px gray;
+    letter-spacing: 0px;
     word-spacing: 0px;
-    writing-mode:horizontal-tb;
+    writing-mode: horizontal-tb;
 }
 
 div#wwa-wrapper {
@@ -58,7 +60,7 @@ div#wwa-sidebar>div.wide-cell-row {
     border: 0px;
     width: 120px;
     height: 25px;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 div#wwa-sidebar>div.wide-cell-row.onpress/*, div#wwa-sidebar>div.wide-cell-row:hover*/ {
@@ -204,6 +206,7 @@ div#wwa-sidebar>div.item-cell.onpress/*, div#wwa-sidebar>div.item-cell:hover */ 
     top: 370px;
     left: 0px;
     z-index: 121;
+    font-size: 14px!important;
 }
 
 #cell-gotowwa {
@@ -404,7 +407,7 @@ div.item-disp {
     border-style: solid;
     border-width: 2px;
     border-color: #000000;
-    border-radius: 10px;
+    border-radius: 15px;
 /*    background-color: rgba( 255, 255, 255, 0.9 ); */ /*システムで指定することになりました。$colorで。*/
     cursor: pointer;
     overflow: auto;
@@ -418,8 +421,8 @@ div.item-disp {
 }
 #wwa-password-window>div.wwa-password-description {
     text-align: left;
-    font-size: 12px;
-    padding: 5px;
+    font-size: 14px;
+    padding: 8px;
 }
 
 #wwa-password-window>textarea {
