なるべく正常に表示できるように互換性を確保

--- a/wwa.css
+++ b/wwa.css
@@ -13,7 +13,7 @@
     height: 440px;
     font-size: 18px;
     /*font-family: 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro', 'メイリオ','Meiryo','ＭＳ Ｐゴシック',sans-serif;*/
-    font-family: monospace;
+    font-family: 'ＭＳ ゴシック', 'Osaka-mono', monospace;
     line-height: 1.2;
     text-indent: 0px;
     text-shadow: 1px 0px 0px gray;
