--- a/wwa.css
+++ b/wwa.css
@@ -13,10 +13,9 @@
     height: 440px;
     font-size: 18px;
     /*font-family: 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro', 'メイリオ','Meiryo','ＭＳ Ｐゴシック',sans-serif;*/
-    font-family: 'Courier New', 'Meiryo', monospace;
+    font-family: 'Consolas', 'Meiryo', monospace;
     line-height: 1.2;
     text-indent: 0px;
-    text-shadow: 1px 0px 0px gray;
     letter-spacing: 0px;
     word-spacing: 0px;
     writing-mode: horizontal-tb;
@@ -482,7 +481,6 @@ div.item-disp {
     top: 20px;
     left: 140px;
     color: #FF0000;
-    text-shadow: 1px 0px 0px #FF8080;
 }
 
 
