--- a/style.css
+++ b/style.css
@@ -8,3 +8,11 @@ body {
 footer#copyright {
     text-align: center;
 }
+
+.centering {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    margin: 0;
+    min-height: 100vh;
+}
