--- a/wwa.css
+++ b/wwa.css
@@ -1,4 +1,4 @@
-﻿@charset "UTF-8";
+@charset "UTF-8";
 
 /**
     wwa.css
@@ -6,6 +6,11 @@
     このファイルは、WWAの起動時に必要です。
     フォントやフォントサイズは自由に変更できます。
 */
+.wwa-message-window{
+    background-color: rgba(255, 255, 255, 0.9);
+    color: rgb(0, 0, 0);
+    border-color: rgb(96, 96, 96);
+}
 
 
 .wwa-size-box {
