--- a/template/wwa.pug
+++ b/template/wwa.pug
@@ -1,21 +1,39 @@
+mixin copyright(config)
+    p
+        | #{config.genre} &quot;
+        a(href=config.product.href).wwa-copyright #{config.product.name}
+        | &quot; &copy; #{config.startYear}-#{config.presentYear} #{config.credit}
+
+
 doctype html
 html(lang="ja")
     head
         meta(charset="UTF-8")
-        title World Wide Adventure Wing
+        title #{title}
+
+        // wwa requirements
+        link(rel="stylesheet" href="wwa.css")
+        case mode
+            when "production"
+                script(src="audio/audio.min.js")
+                script(src="wwa.js")
+            when "development"
+                script(src="cryptojs/aes.js")
+                script(src="audio/audio.min.js")
+                script(src="wwa.long.js")
+        // /wwa requirements
+
     body
         #wrapper
-            #wwa-wrapper.wwa-size-box
+            #wwa-wrapper.wwa-size-box(
+                data-wwa-mapdata=wwa.mapdata,
+                data-wwa-loader=wwa.loader
+                data-wwa-audio-dir=wwa.audioDir,
+                data-wwa-urlgate-enable=wwa.urlgateEnable,
+                data-wwa-title-img=wwa.titleImg
+            )
     
-    footer#copyright
-        p
-            | Internet RPG &quot;
-            a(href="http://www.wwajp.com").wwa-copyright
-                |  World Wide Adventure Wing
-            | &quot; &copy; 1996-2016 NAO
-
-        p
-            | &quot;
-            a(href="http://wwawing.com").wwa-copyright
-                |  World Wide Adventure Wing
-            | &quot; &copy; 2013-2018 WWA Wing Team
+        if copyright
+            footer#copyright
+                +copyright(copyright.wwa)
+                +copyright(copyright.wing)
