fix(wwa.pug): data-wwa属性の修正2件

--- a/template/wwa.pug
+++ b/template/wwa.pug
@@ -48,8 +48,8 @@ html(lang="ja")
                 data-wwa-mapdata=page.wwa.resources.mapdata,
                 data-wwa-loader=page.wwa.resources.loader
                 data-wwa-audio-dir=page.wwa.resources.dir,
-                data-wwa-urlgate-enable=page.wwa.urlgateEnable,
-                data-wwa-title-img=page.wwa.titleImg
+                data-wwa-urlgate-enable=page.wwa.urlgateEnable ? "true" : "false",
+                data-wwa-title-img=page.wwa.resources.titleImg
             )
     
         if page.copyrights
