--- a/wwa.css
+++ b/wwa.css
@@ -10,9 +10,10 @@
     background-color: rgba(255, 255, 255, 0.9);
     color: rgb(0, 0, 0);
     border-color: rgb(96, 96, 96);
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
-
-
 .wwa-size-box {
     width: 560px;
     height: 440px;
