--- a/wwa.css
+++ b/wwa.css
@@ -409,11 +409,15 @@ div.item-disp {
     margin: 18px;
     border-style: solid;
     border-width: 2px;
-    border-color: #000000;
     border-radius: 10px;
-/*    background-color: rgba( 255, 255, 255, 0.9 ); */ /*システムで指定することになりました。$colorで。*/
+    background-color: rgba( 255, 255, 255, 0.9 ); /*システムで指定することになりました。$colorで。*/
     cursor: pointer;
     overflow: auto;
+    color: rgb(0, 0, 0);
+    border-color: rgb(96, 96, 96);
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 #wwa-battle-estimate {
