--- a/packages/styles/src/core/_canvas.scss
+++ b/packages/styles/src/core/_canvas.scss
@@ -10,10 +10,66 @@ canvas.wwa-canvas {
   top: 0px;
   left: 0px;
 }
-canvas#wwa-map {
-  z-index: 100;
-}
 
-canvas#wwa-map-sub {
-  z-index: 101;
+#wwa-cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 560px;
+  height: 440px;
+  background-color: #FFFFFF;
+  
+  > #version {
+      position: absolute;
+      top: 392px;
+      left: 0;
+      height: 16px;
+      font-size: 12px;
+      color: #000000;
+  }
+  > #progress-message-container {
+      position: absolute;
+      top: 408px;
+      left: 0;
+      width: 560px;
+      height: 16px;
+      color: #000000;
+      font-size: 12px;
+      overflow: hidden;
+      text-align: left;
+  }
+  > #progress-bar-bg {
+      position: absolute;
+      top: 424px;
+      left: 0;
+      width: 560px;
+      height: 16px;
+      background-color: #808080;
+  }
+  > .progress-bar {
+      position: absolute;
+      top: 424px;
+      left: 0;
+      width: 0;
+      height: 16px;
+  }
+  > #progress-bar {
+      background-color: #00FF90;
+  }
+  > #progress-bar-audio {
+      background-color: #008aff;
+  }
+  > #progress-disp {
+      position: absolute;
+      top: 424px;
+      left: 440px;
+      width: 120px;
+      height: 16px;
+      background-color: #FF6A00;
+      color: #FFFFFF;
+      text-align: center;
+      font-weight: bold;
+      font-size: 12px;
+      overflow: hidden;
+  }
 }
