--- a/packages/styles/src/core/core.scss
+++ b/packages/styles/src/core/core.scss
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 @import 'sidebar';
 @import 'canvas';
+@import 'progressbar';
+@import 'z-index';
 
 /**
     wwa.css
@@ -38,16 +40,12 @@
     overflow: auto;
 }
 
-#wwa-battle-estimate {
-    z-index: 230;
-}
 #wwa-password-window {
-    z-index: 231;
-}
-#wwa-password-window > div.wwa-password-description {
-    text-align: left;
-    font-size: 12px;
-    padding: 5px;
+    > div.wwa-password-description {
+        text-align: left;
+        font-size: 12px;
+        padding: 5px;
+    }
 }
 
 #wwa-password-window > textarea {
@@ -112,80 +110,7 @@
 	border-color: #808080;
 	border-style: solid;
     display: none;
-    z-index: 250;
 }
-
-
-#wwa-cover {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 560px;
-    height: 440px;
-    z-index: 300;
-    background-color: #FFFFFF;
-    
-    > #version {
-        position: absolute;
-        top: 392px;
-        left: 0;
-        height: 16px;
-        font-size: 12px;
-        color: #000000;
-    }
-    > #progress-message-container {
-        position: absolute;
-        top: 408px;
-        left: 0;
-        width: 560px;
-        height: 16px;
-        color: #000000;
-        font-size: 12px;
-        overflow: hidden;
-        text-align: left;
-        z-index: 305;
-    }
-    > #progress-bar-bg {
-        position: absolute;
-        top: 424px;
-        left: 0;
-        width: 560px;
-        height: 16px;
-        background-color: #808080;
-        z-index: 310;
-    }
-    > .progress-bar {
-        position: absolute;
-        top: 424px;
-        left: 0;
-        width: 0;
-        height: 16px;
-    }
-    > #progress-bar {
-        background-color: #00FF90;
-        z-index: 315;
-    }
-    > #progress-bar-audio {
-        background-color: #008aff;
-        z-index: 316;
-    }
-    > #progress-disp {
-        position: absolute;
-        top: 424px;
-        left: 440px;
-        width: 120px;
-        height: 16px;
-        background-color: #FF6A00;
-        color: #FFFFFF;
-        text-align: center;
-        font-weight: bold;
-        z-index: 320;
-        font-size: 12px;
-        overflow: hidden;
-    }
-}
-
-/* message window: z-index 400 */
 
 #wwa-audio-wrapper {
     position: absolute;
@@ -195,5 +120,4 @@
     width: 440px;
     height: 440px;
     overflow: hidden;
-    z-index: -9999;
 }
