実行コマンド追加、coreをindexに変更

--- a/packages/styles/src/core/_canvas.scss
+++ b/packages/styles/src/core/_canvas.scss
@@ -73,3 +73,15 @@ canvas.wwa-canvas {
       overflow: hidden;
   }
 }
+
+#wwa-fader {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 440px;
+	height: 440px;
+	border-width: 0;
+	border-color: #808080;
+	border-style: solid;
+    display: none;
+}
