サイドバーや画面周りの位置や挙動を変数や汎用セレクタにまとめたりした

--- a/packages/styles/src/core/_canvas.scss
+++ b/packages/styles/src/core/_canvas.scss
@@ -1,87 +1,83 @@
-div#wwa-wrapper {
-  position: relative;
-  margin: 0 auto;
-  text-align: center;
-}
+$wwa_screen_width: 560px;
+$wwa_screen_height: 440px;
+$wwa_canvas_width: 440px;
+// プログレスバーや1文字を収める1行分の高さ
+$wwa_cover_row_height: 16px;
+
 
 canvas.wwa-canvas {
-  display: block;
-  position: absolute;
-  top: 0px;
-  left: 0px;
+    display: block;
+    position: absolute;
+}
+
+@mixin cover_message($line: 1) {
+    position: absolute;
+    bottom: $line * $wwa_cover_row_height;
+    height: $wwa_cover_row_height;
+    text-align: left;
+    padding-left: 4px;
+}
+
+@mixin progress_bar($width: $wwa_screen_width, $color: transparent) {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: $width;
+    height: $wwa_cover_row_height;
+    background-color: $color;
 }
 
 #wwa-cover {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 560px;
-  height: 440px;
-  background-color: #FFFFFF;
-  
-  > #version {
-      position: absolute;
-      top: 392px;
-      left: 0;
-      height: 16px;
-      font-size: 12px;
-      color: #000000;
-  }
-  > #progress-message-container {
-      position: absolute;
-      top: 408px;
-      left: 0;
-      width: 560px;
-      height: 16px;
-      color: #000000;
-      font-size: 12px;
-      overflow: hidden;
-      text-align: left;
-  }
-  > #progress-bar-bg {
-      position: absolute;
-      top: 424px;
-      left: 0;
-      width: 560px;
-      height: 16px;
-      background-color: #808080;
-  }
-  > .progress-bar {
-      position: absolute;
-      top: 424px;
-      left: 0;
-      width: 0;
-      height: 16px;
-  }
-  > #progress-bar {
-      background-color: #00FF90;
-  }
-  > #progress-bar-audio {
-      background-color: #008aff;
-  }
-  > #progress-disp {
-      position: absolute;
-      top: 424px;
-      left: 440px;
-      width: 120px;
-      height: 16px;
-      background-color: #FF6A00;
-      color: #FFFFFF;
-      text-align: center;
-      font-weight: bold;
-      font-size: 12px;
-      overflow: hidden;
-  }
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: $wwa_screen_width;
+    height: $wwa_screen_height;
+    line-height: $wwa_cover_row_height;
+    font-size: 12px;
+    background-color: #FFFFFF;
+
+    > #version {
+        @include cover_message(2);
+        color: #000000;
+    }
+    > #progress-message-container {
+        @include cover_message(1);
+        color: #000000;
+    }
+    > #progress-bar {
+        @include progress_bar(auto, #00ff90);
+        &-bg {
+            @include progress_bar(560px, #808080);
+        }
+        &-audio {
+            @include progress_bar(auto, #008aff);
+        }
+    }
+    > #progress-disp {
+        $wwa_progress_disp_width: 120px;
+
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        width: $wwa_progress_disp_width;
+        height: $wwa_cover_row_height;
+        background-color: #FF6A00;
+        color: #FFFFFF;
+        text-align: center;
+        font-weight: bold;
+        overflow: hidden;
+    }
 }
 
 #wwa-fader {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 440px;
-	height: 440px;
-	border-width: 0;
-	border-color: #808080;
-	border-style: solid;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 440px;
+    height: 440px;
+    border-width: 0;
+    border-color: #808080;
+    border-style: solid;
     display: none;
 }
