--- a/packages/styles/src/core/_sidebar.scss
+++ b/packages/styles/src/core/_sidebar.scss
@@ -1,134 +1,117 @@
-$status: (
-  energy: 0,
-  strength: 1,
-  defence: 2,
-  gold: 3
-);
+$wwa_sidebar_font_size: 14px;
+$wwa_wide_cell_height: 35px;
+$wwa_status_x_offset: 6px;
+$wwa_icon_width: 40px;
 
-$menu_buttons: (
-  load: 0,
-  save: 1,
-  restart: 2,
-  gotowwa: 3
-);
 
-$wide_cell_width: 120px;
-$wide_cell_height: 35px;
-$item_cell_width: 40px;
-$status_icon_width: 40px;
-
-$button_cell_onpress_border_size: 3px;
-
-%button_cell_onpress_border {
-  border-width: $button_cell_onpress_border_size 0 0 $button_cell_onpress_border_size;
-  border-style: solid;
-  border-color: #000;
+%wide_cell {
+    position: absolute;
+    width: 120px;
+    height: $wwa_wide_cell_height;
+    line-height: $wwa_wide_cell_height;
+    font-size: $wwa_sidebar_font_size;
 }
 
-div#wwa-sidebar {
-  position: absolute;
-  top: 0px;
-  left: 440px;
-  width: 120px;
-  height: 440px;
-  background-color: #000000;
+%item_cell {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+}
+
+%button_cell_onpress {
+    $border_size: 3px;
+
+    margin: $border_size 0 0 $border_size;
 }
 
 
 div#wwa-sidebar {
-  > div.wide-cell-row {
     position: absolute;
-    width: $wide_cell_width;
-    height: $wide_cell_height;
-    line-height: $wide_cell_height;
-    font-size: 14px;
-  }
-  > div.wide-cell-row.onpress/*, div#wwa-sidebar>div.wide-cell-row:hover*/ {
-    @extend div.wide-cell-row;
-    @extend %button_cell_onpress_border;
-    width: $wide_cell_width - 3px;
-    height: $wide_cell_height - 3px;
-  }
-   > div.item-cell  {
-    position: absolute;
-    width: $item_cell_width;
-    height: $item_cell_width;
-  }
-  > div.item-cell.onpress/*, div#wwa-sidebar>div.item-cell:hover */  {
-    @extend %button_cell_onpress_border;
-    position: absolute;
-    width: $item_cell_width - 3px;
-    height: $item_cell_width - 3px;;
-  }
+    top: 0px;
+    left: 440px;
+    width: 120px;
+    height: 440px;
+    background-color: #000000;
+
+    > div.wide-cell-row {
+        @extend %wide_cell;
+        &.onpress /*, div#wwa-sidebar>div.wide-cell-row:hover*/ {
+            @extend %button_cell_onpress;
+        }
+    }
+    > div.item-cell {
+        @extend %item_cell;
+        &.onpress /*, div#wwa-sidebar>div.item-cell:hover */ {
+            @extend %button_cell_onpress;
+        }
+    }
+    overflow: hidden; // %button_cell_onpress のはみ出し対策
 }
 
 div.status-icon {
-  position: absolute;
-  top: 0px;
-  left: 5px;
-  width: $status_icon_width;
-  height: $wide_cell_height;
-  padding: 0px;
-  margin: 0px;
+    width: $wwa_icon_width;
+    height: $wwa_wide_cell_height;
+    margin-left: $wwa_status_x_offset;
 }
 
 div.status-value-box {
-  position: absolute;
-  top: 0px;
-  left: 5px + $status_icon_width;
-  width: $wide_cell_width - ($status_icon_width + 5px);
-  height: $wide_cell_height;
-  line-height: $wide_cell_height;
-  text-align: center;
+    @extend %wide_cell;
+    top: 0;
+    left: 0;
+    padding-left: $wwa_status_x_offset + $wwa_icon_width;
+    box-sizing: border-box;
+    text-align: center;
 }
 
 div.item-click-border {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: $item_cell_width;
-  height: $item_cell_width;
+    @extend %item_cell;
+    top: 0;
+    left: 0;
 }
 
 div.item-disp {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: $item_cell_width;
-  height: $item_cell_width;
+    @extend %item_cell;
+    top: 0;
+    left: 0;
 }
 
 .wide-button {
-  position: absolute;
-  width: $wide_cell_width;
-  left: 0px;
-  height: $wide_cell_height;
-  cursor: pointer;
+    @extend %wide_cell;
+    cursor: pointer;
 }
 
-@each $status_name, $row in $status {
-  #disp-#{$status_name} {
-    top: $row * 35px;
-    left: 0px;
-  }
+
+// ここより位置設定 //
+$status: energy, strength, defence, gold;
+$menu_buttons: load, save, restart, gotowwa;
+
+$_y: 0;
+@each $status_name in $status {
+    #disp-#{$status_name} {
+        top: $_y;
+        left: 0px;
+    }
+    $_y: $_y + $wwa_wide_cell_height;
 }
 
 @for $row from 0 to 4 {
-  @for $column from 0 to 3 {
-    #item#{$row * 3 + $column} {
-      top: 140px + ($row * 40px);
-      left: $column * 40px;
+    @for $column from 0 to 3 {
+        #item#{($row * 3) + $column} {
+            top: $_y;
+            left: $column * $wwa_icon_width;
+        }
     }
-  }
+    $_y: $_y + $wwa_icon_width;
 }
 
-@each $button_name, $row in $menu_buttons {
-  #cell-#{$button_name} {
-    top: 300px + ($row * 35px);
-    left: 0px;
-  }
-  #button-#{$button_name} {
-    top: 300px + ($row * 35px);
-    left: 0px;
-  }
+@each $button_name in $menu_buttons {
+    #cell-#{$button_name} {
+        top: $_y;
+        left: 0px;
+    }
+    #button-#{$button_name} {
+        top: $_y;
+        left: 0px;
+    }
+    $_y: $_y + $wwa_wide_cell_height;
 }
