--- a/packages/styles/src/extends/classic/index.scss
+++ b/packages/styles/src/extends/classic/index.scss
@@ -4,19 +4,20 @@ $monospace_font: 'ＭＳ ゴシック', 'Osaka-mono', monospace;
 $sans-serif_font: 'ＭＳ Ｐゴシック', 'Osaka', sans-serif;
 
 $wwa_font_size: 18px;
-$wwa_sidebar_font_size: 16px;
+$wwa_sidebar_font_size: 17.5px;
 
 .wwa-size-box {
     font-size: $wwa_font_size;
     font-family: $monospace_font;
-    text-shadow: 1px 0px 0px gray;
+    text-shadow: 1px 0px 0 gray;
 }
 
 div#wwa-sidebar {
     font-size: $wwa_sidebar_font_size;
     font-family: $sans-serif_font;
+    text-shadow: 1px 1px 0 gray;
     #cell-restart {
-        font-size: 14px;
+        font-weight: normal;
     }
 }
 
