HTMLのviewportにuser-scalableを追加、CSSにhas-virtualpadを追加、スタイルシートのデプロイ方法を変更

--- a/packages/assets/style/style.css
+++ b/packages/assets/style/style.css
@@ -5,6 +5,10 @@ body {
     background-color: #A0A0A0;
 }
 
+body.has-virtualpad {
+    margin: 0;
+}
+
 footer#copyright {
     text-align: center;
 }
