fix(parts_player): エフェクト中の重なり順を変更

--- a/packages/assets/style/wwa.css
+++ b/packages/assets/style/wwa.css
@@ -253,6 +253,10 @@ div.item-disp {
     margin: 0px;
 }
 
+.item-transitioning {
+    z-index: 240 !important;
+}
+
 #disp-energy>.status-icon{
     z-index: 140;
 }
