--- a/packages/assets/style/wwa.css
+++ b/packages/assets/style/wwa.css
@@ -253,6 +253,12 @@ div.item-disp {
     margin: 0px;
 }
 
+.item-overwritten {
+    width: 40px;
+    height: 40px;
+    z-index: 0 !important;
+}
+
 .item-transitioning {
     z-index: 240 !important;
 }
